flux/apps/base/portfolio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      port: 3000
      targetPort: http
