flux/apps/base/portfolio/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`davud.io`) || Host(`www.davud.io`)
      kind: Rule
      services:
        - name: portfolio
          port: 3000
      middlewares:
        - name: security-headers
          namespace: traefik
  tls:
    secretName: portfolio-tls
